--- a/todscansoextensiin.html
+++ b/todscansoextensiin.html
@@ -86,8 +86,9 @@
         <div id="player" class="hidden"></div>
         <div id="alerta-extension" class="hidden alert-card">
             <i class='bx bx-error-circle boxicon'></i>
-            <h2>Instala la Extensión VideoPlayer</h2>
-            <p>Para ver estos canales, necesitas instalar la extensión VideoPlayer.</p>
+           <h2>Instalar Extensión VideoPlayer</h2>
+            <p>Para ver los canales, necesitas añadir la extensión VideoPlayer.</p>
+            <p>Recordar canales disponibles en Argentina, Paraguay, Uruguay o con VPN de estos Paises.</p>
             <p>Una vez instalada la extensión, recarga la página.</p>
             <a href="https://chrome.google.com/webstore/detail/opmeopcambhfimffbomjgemehjkbbmji" target="_blank">Instalar ahora</a>
         </div>
