--- a/todscansoextensiin.html
+++ b/todscansoextensiin.html
@@ -86,9 +86,10 @@
         <div id="player" class="hidden"></div>
         <div id="alerta-extension" class="hidden alert-card">
             <i class='bx bx-error-circle boxicon'></i>
-           <h2>Instalar Extensión VideoPlayer</h2>
+             <h2>Instalar Extensión VideoPlayer</h2>
             <p>Para ver los canales, necesitas añadir la extensión VideoPlayer.</p>
-            <p>Recordar canales disponibles en Argentina, Paraguay, Uruguay o con VPN de estos Paises.</p>
+            <p>Una vez instalada la extensión en tu Navegador, recargar esta página.</p>
+            <p>Recuerda:estos canales estan disponibles en Argentina, Paraguay, Uruguay o con VPN de estos Paises.</p>
             <p>Una vez instalada la extensión, recarga la página.</p>
             <a href="https://chrome.google.com/webstore/detail/opmeopcambhfimffbomjgemehjkbbmji" target="_blank">Instalar ahora</a>
         </div>
@@ -121,7 +122,28 @@ else if (getURL == "Q2FuYWxfNV9Sb3Nhcmlv" || getURL == "VEVMRUZVVFVST19DNA==" ||
 number = 4;
 else
 number = 3;
+        // Función para verificar si es Windows y PC
+        function isWindowsPC() {
+            const userAgent = navigator.userAgent.toLowerCase();
+            return /windows/.test(userAgent) && !/windows phone/.test(userAgent);
+        }
 
+        // Función para mostrar el mensaje de dispositivo no compatible
+        function showUnsupportedDeviceMessage() {
+            const unsupportedMessage = document.createElement('div');
+            unsupportedMessage.classList.add('alert-card');
+            unsupportedMessage.innerHTML = `
+                <i class='bx bx-error-circle boxicon'></i>
+                <h2> Para que tu Dispositivo sea compatible</h2>
+                <p>Mira el Tutorial o Info de Extensiones para acceder a opcion.</p>
+            `;
+            document.body.appendChild(unsupportedMessage);
+        }
+
+        // Verificar si es un dispositivo compatible antes de ejecutar el código principal
+        if (!isWindowsPC()) {
+            showUnsupportedDeviceMessage();
+        } else {
             // Array de URLs disponibles
             var mt = ["edge-live01-mun", "edge-live02-mun","edge-mix01-cte","edge-mix02-cte", "edge-live11-hr", "edge-live12-hr", "edge-live13-hr", "edge-live14-hr", "edge-live15-hr", "edge-live16-hr", "edge-live17-hr", "edge-live31-hr", "edge-live32-hr", "edge-live34-hr", "edge-live11-sl", "edge-live12-sl", "edge-live13-sl", "edge-live15-sl", "edge-live17-sl", "edge-live31-sl", "edge-vod02-sl", "edge-vod04-sl", "edge-vod06-sl", "edge9-sl", "edge10-sl", "edge-vod01-hr", "edge-vod03-hr", "edge-vod04-hr", "edge1-ccast-sl", "edge2-ccast-sl", "edge6-ccast-sl", "edge-live01-cen", "edge-live03-cen", "edge-mix02-cte", "edge-vod01-cen", "edge-live01-cte", "edge-live01-coe","edge-live01-coe","edge5-hr","edge-mix02-coe", "edge-mix03-coe", "edge-mix04-coe", "edge-mix05-coe","edge-live01-bel", "edge-live02-bel","edge-live03-bel","edge-mix01-ird", "edge-mix02-ird", "edge-mix01-mus", "edge-mix03-mus"];
 
