--- a/todscansoextensiin.html
+++ b/todscansoextensiin.html
@@ -122,7 +122,28 @@ else if (getURL == "Q2FuYWxfNV9Sb3Nhcmlv" || getURL == "VEVMRUZVVFVST19DNA==" ||
 number = 4;
 else
 number = 3;
-    
+        // Función para verificar si es Windows y PC
+        function isWindowsPC() {
+            const userAgent = navigator.userAgent.toLowerCase();
+            return /windows/.test(userAgent) && !/windows phone/.test(userAgent);
+        }
+
+        // Función para mostrar el mensaje de dispositivo no compatible
+        function showUnsupportedDeviceMessage() {
+            const unsupportedMessage = document.createElement('div');
+            unsupportedMessage.classList.add('alert-card');
+            unsupportedMessage.innerHTML = `
+                <i class='bx bx-error-circle boxicon'></i>
+                <h2>Dispositivo no compatible</h2>
+                <p>Esta Opcion solo es compatible con PC con Windows. Por favor, usa un PC para acceder.</p>
+            `;
+            document.body.appendChild(unsupportedMessage);
+        }
+
+        // Verificar si es un dispositivo compatible antes de ejecutar el código principal
+        if (!isWindowsPC()) {
+            showUnsupportedDeviceMessage();
+        } else {
             // Array de URLs disponibles
             var mt = ["edge-live01-mun", "edge-live02-mun","edge-mix01-cte","edge-mix02-cte", "edge-live11-hr", "edge-live12-hr", "edge-live13-hr", "edge-live14-hr", "edge-live15-hr", "edge-live16-hr", "edge-live17-hr", "edge-live31-hr", "edge-live32-hr", "edge-live34-hr", "edge-live11-sl", "edge-live12-sl", "edge-live13-sl", "edge-live15-sl", "edge-live17-sl", "edge-live31-sl", "edge-vod02-sl", "edge-vod04-sl", "edge-vod06-sl", "edge9-sl", "edge10-sl", "edge-vod01-hr", "edge-vod03-hr", "edge-vod04-hr", "edge1-ccast-sl", "edge2-ccast-sl", "edge6-ccast-sl", "edge-live01-cen", "edge-live03-cen", "edge-mix02-cte", "edge-vod01-cen", "edge-live01-cte", "edge-live01-coe","edge-live01-coe","edge5-hr","edge-mix02-coe", "edge-mix03-coe", "edge-mix04-coe", "edge-mix05-coe","edge-live01-bel", "edge-live02-bel","edge-live03-bel","edge-mix01-ird", "edge-mix02-ird", "edge-mix01-mus", "edge-mix03-mus"];
 
@@ -177,8 +198,7 @@ else if (getURL == "VW5pdmVyc2FsX1JlYWxpdHk=") // Universal Reality
         keyId = "cedd9c1a5c2ae43f80ee3197212016d6";
         key = "bf47a3c39e164a97ea6adc4c8dd57435";
 }
-	
-	
+		
 else if (getURL == "RXZlbnRvc19IRF9VeQ==") // Eventos 1 UY
 {
         keyId = "48d0e34c8797c5c2a742d2630a8fb975";
@@ -981,12 +1001,17 @@ else if (getURL == "U2V4dHJlbWU")
 	keyId = "95bd64227acf458daf7886f803d0298e";
 	key = "79e28ee0ec58958bb666f9e53a0cd434";
 }
-else if (getURL == "RXZlbnRvczFIRA")
+else if (getURL == "RXZlbnRvczFIRA") // Eventos 1
 {
         keyId = "5c86e237317c2231ac1bc130e995fad6";
         key = "dcacf7b239ee03df3c69ca11dbcde4eb";
 }
-      
+
+else if (getURL == "RXZlbnRvc18yX0hE") // Eventos 2
+{
+        keyId = "e54e9ea87a634658fbba0e380aa701a7";
+        key = "4e486d25d7d0e7d131743b285963c643";
+}	
 
             // Convertir keyId y key a una cadena JSON
             if (keyId && key) {
