--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -14,7 +14,7 @@
   
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="https://pramennudeewebseitee.github.io/bootstrap.min-extensioness.css">
-  
+  <style>
  body {
             background-color: #000;
             color: #fff;
