--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -23,13 +23,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
             font-family: Arial, sans-serif;
         }
 
         .container {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
