--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -23,6 +23,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            width: 100%;
             height: 100%;
             font-family: Arial, sans-serif;
         }
