--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -183,7 +183,8 @@ function showUnsupportedDeviceMessage() {
     unsupportedMessage.innerHTML = `
         <i class='bx bx-error-circle boxicon'></i>
        <h2>Dispositivo no compatible</h2>
-     <p>Esta Opcion solo es compatible con PC con Windows. Por favor, usa un PC para acceder.</p>
+     <p>Esta Opción solo es compatible con Computadoras/Notebook con Windows. Por favor, usa un PC para acceder.</p>
+      <p>Por favor, usa una Computadoras/Notebook para acceder.</p>
     `;
     document.body.appendChild(unsupportedMessage);
 }
