--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -36,14 +36,14 @@
         }
 
         #player {
-            position: relative;
+            position: center;
             width: 100%;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
             background: #000;
         }
 
         #player iframe {
-            position: absolute;
+            position: center;
             top: 0;
             left: 0;
             width: 100%;
