--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -184,7 +184,7 @@ function showUnsupportedDeviceMessage() {
         <i class='bx bx-error-circle boxicon'></i>
        <h2>Dispositivo no compatible</h2>
      <p>Esta Opción es solo para Computadoras/Notebook con Windows,</p>
-      <p>Por favor,use una Computadoras/Notebook para acceder.</p>
+      <p>use una Computadoras/Notebook para Acceder.</p>
     `;
     document.body.appendChild(unsupportedMessage);
 }
