--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -22,7 +22,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 560px;
             font-family: Arial, sans-serif;
         }
 
@@ -38,6 +38,7 @@
         #player {
             position: relative;
             width: 100%;
+		height: 560px;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
             background: #000;
         }
