--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -22,13 +22,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 400px;
+            height: 100vh;
             font-family: Arial, sans-serif;
         }
 
         .container {
             width: 100%;
-            height: 400px;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -38,7 +38,6 @@
         #player {
             position: relative;
             width: 100%;
-		height: 400px;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
             background: #000;
         }
@@ -48,7 +47,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 400px;
+            height: 100%;
             border: none;
         }
 
