--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -20,13 +20,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
             font-family: Arial, sans-serif;
         }
 
         .container {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -34,10 +34,11 @@
         }
 
         #player {
-            position: relative;
+            position: absolute;
             width: 100%;
+            height: 100%;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
-            background: #000;
+            background: #0000;
         }
 
         #player iframe {
