--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -34,9 +34,9 @@
         }
 
         #player {
-            position: absolute;
+            position: relative;
             width: 100%;
-            height: 100%;
+            height: 900px;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
             background: #0000;
         }
@@ -46,7 +46,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 900px;
             border: none;
         }
 
