--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -13,20 +13,20 @@
 <link rel="stylesheet" href="https://boxicons.com/css/boxicons.min.css">
 <style>
         body {
-            background-color:#05081c;
+            background-color: #05081c;
             color: #fff;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100%;
+            height: 100vh;
             font-family: Arial, sans-serif;
         }
 
         .container {
             width: 100%;
-            height: 100%;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -36,9 +36,8 @@
         #player {
             position: relative;
             width: 100%;
-            height: 900px;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
-            background: #0000;
+            background: #000;
         }
 
         #player iframe {
@@ -46,7 +45,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 900px;
+            height: 100%;
             border: none;
         }
 
