--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -26,7 +26,7 @@
 
         .container {
             width: 100%;
-            height: 100vh;
+            height: 900px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -36,6 +36,7 @@
         #player {
             position: relative;
             width: 100%;
+            height: 900px;
             padding-top: 56.25%; /* Aspect ratio 16:9 */
             background: #000;
         }
@@ -45,7 +46,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 900px;
             border: none;
         }
 
