--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -20,6 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+             width: 100%;
             height: 100vh;
             font-family: Arial, sans-serif;
         }
