--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -184,7 +184,7 @@
                   // Función para mostrar el mensaje de dispositivo no compatible
                 function showUnsupportedDeviceMessage() {
                         const unsupportedMessage = document.createElement('div');
-                        unsupportedMessage.classList.add('alert-card', 'text-center', 'bg-dark', 'bg-gradient');
+                        unsupportedMessage.classList.add('hidden','alert-card', 'text-center', 'bg-dark', 'bg-gradient');
                         unsupportedMessage.innerHTML = `
     <i class='bx bx-error-circle boxicon'></i>
        <h2>Dispositivo no compatible</h2>
