--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -186,10 +186,10 @@
                         const unsupportedMessage = document.createElement('div');
                         unsupportedMessage.classList.add('hidden','alert-card', 'text-center', 'bg-dark', 'bg-gradient');
                         unsupportedMessage.innerHTML = `
-    <center><i class='bx bx-error-circle boxicon'></i>
+    <i class='bx bx-error-circle boxicon'></i>
        <h2>Dispositivo no compatible</h2>
      <p>Esta Opción es solo para Computadoras/Notebook con Windows use una</p>
-      <p> Computadoras/Notebook para Acceder.</p></center>
+      <p> Computadoras/Notebook para Acceder.</p>
       
    `;
                         document.querySelector(".container").style.display = "none";
