--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -307,7 +307,7 @@
 
 
         // Construir la URL del mpd
-        var mpdBase = `https://${mt[randomIndex]}.cvattv.com.ar/live/c${number}eds/${atob(getURL)}/SA_Live_dash_enc/${atob(getURL)}.mpd`;
+        var mpdBase = `https://${mt[randomIndex]}.cvattv.com.ar/live/c${number}eds/${atob(getURL)}/SA_Live_dash_enc_wl/${atob(getURL)}.mpd`;
 
         // Construir la URL del mpd por proxy por respaldo
         let getHeaderMPD = "";
