--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -355,7 +355,7 @@ const CHANNELS = new Map([
     // C4
     ...["Q2FuYWwxMF9SaW9fTmVncm8=","Q2FuYWxfNV9Sb3Nhcmlv","VFZfQ2FtYXJh","Q0hfMTJfUG9zYWRhcw==","Q0JBMjQ=","TWl4VFY=","TG9jYWxfQ2FybG9zX1Bheg==", "Q2FuYWwxMF9DQkFfSEQ=","VU5JQ0FOQUxfQzQ=","TGF0YW1fUnVyYWw=","U29tb3NfQ29ycmllbnRlcw==","U29tb3NfU2FsdGE=","U29tb3NfUmFmYWVsYQ==", "U29tb3NfUmVzaXN0ZW5jaWE=","U29tb3NfRWxfVmFsbGU=","Q2FuYWxfQ2l1ZGFkX01EUQ==","NV9EaWFzX1BZ","VGVsZWZlX0ludGVybmFjaW9uYWw=","Q0hfMTNfQ29ycmllbnRlcw==","U2hvd19TcG9ydHM=","Q0hfOV9SZXNpc3RlbmNpYQ==","VEVMRUZVVFVST19DNA==","VGVsZWZlX05ldXF1ZW4=","VGVsZWZlX1NhbHRh","U05UX0M0","UEFSQVZJU0lPTl9DNA==","Tk9USUNJQVNfUFlfQzQ=","UEFSQVZJU0lPTl9DNA==","TEFfVEVMRV9DNA==","U1VSX1RWX0M0","Q2FuYWwxMlVSVQ==","RGlzY292ZXJ5SG9tZUhlYWx0aEhE", "Q2FuYWw0X1VSVQ==","SEJPSEQ=","SEVJX05PVw==","Q2FuYWwxMF9VUlU=","UlBDX0M0"].map(k => [k, 4]),
     // C3
-    ...["RGlzY292ZXJ5SG9tZUhlYWx0aEhE","Qmxvb21iZXJn","Q2FuYWxfVQ==","RnJhbmNlMjRfRmxvdw==","VFZfTmFjaW9uYWxfVXk=","UmVkZV9SZWNvcmQ=", "U29tb3NfQmFoaWFfQmxhbmNh","Q2FuYWxfM19Sb3Nhcmlv","Q2FuYWw3X0JhaGlhX0JsYW5jYQ==","Q2FuYWxfMTNfU0ZF","Q2FuYWw5X0JhaGlhX0JsYW5jYQ==",
+    ...["RVNQTjJIRA","RGlzY292ZXJ5SG9tZUhlYWx0aEhE","Qmxvb21iZXJn","Q2FuYWxfVQ==","RnJhbmNlMjRfRmxvdw==","VFZfTmFjaW9uYWxfVXk=","UmVkZV9SZWNvcmQ=", "U29tb3NfQmFoaWFfQmxhbmNh","Q2FuYWxfM19Sb3Nhcmlv","Q2FuYWw3X0JhaGlhX0JsYW5jYQ==","Q2FuYWxfMTNfU0ZF","Q2FuYWw5X0JhaGlhX0JsYW5jYQ==",
 "TmF0R2VvSEQ=","VE5UX0hEX0FyZw==","VE5UU2VyaWVz","Q2FydG9vbk5ldHdvcms=","Tmlja2Vsb2Rlb24=","QWR1bHRfU3dpbQ==","Q2FuYWxfVW5pdmVyc2lkYWQ=", "RlhIRA==","RXZlbnRvczFIRA"].map(k => [k, 3])
 ]);
 
@@ -636,7 +636,7 @@ function getParameterByName(name) {
 async function getURLwithToken() {
     let token = sessionStorage.getItem('token')
     if (!token) {
-        // const url = 'https://chromecast.cvattv.com.ar/live/c7eds/La_Nacion/SA_Live_dash_enc/La_Nacion.m3u8';
+        
         const url = 'https://chromecast.cvattv.com.ar/live/c7eds/La_Nacion/SA_Live_dash_enc_C/La_Nacion.m3u8';
         let response = await fetch(url, { signal: AbortSignal.timeout(5000) });
         if (response.redirected) {
