--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -790,7 +790,7 @@ async function getValidMpd(channelInfo) {
 }
   
   </script>
-    <script src="../js/script-configuraciones.js"></script>
+    
 </head>
 
 <body>
@@ -980,7 +980,7 @@ Una vez instalada la extensión en tu Navegador,<br> recargar esta página.
 
             // Verificar si es la segunda carga (después del reload)
             const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('reloaded') === 'true') {
+            if (urlParams.get('reloaded') === 'false') {
                 console.log("Segunda carga detectada, cargando canal...");
                 loadChannelStream();
                 return;
@@ -991,7 +991,7 @@ Una vez instalada la extensión en tu Navegador,<br> recargar esta página.
                 () => {
                     console.log("Extensión detectada, iniciando servidor...");
                     // Marcar que vamos a recargar
-                    const newUrl = window.location.href + (window.location.search ? '&' : '?') + 'reloaded=true';
+                    const newUrl = window.location.href + (window.location.search ? '&' : '?') + 'reloaded=false';
                     history.replaceState(null, '', newUrl);
                     addIframeToPlayer();
                 },
