--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>- </title>
 <style>
@@ -803,13 +803,13 @@ async function getValidMpd(channelInfo) {
         </div>
     </div>
 
-       <!-- Mensaje de extensión faltante -->
+    <!-- Mensaje de extensión faltante -->
     <div id="alerta-extension" class="message-container hidden">
         <div class="message-box">
-            <div class="message-icon"> <i class="bx bx-error-circle boxicon"></i></div>
-            <div class="message-title">Instalar Extensión VideoPlayer</div>
+            <div class="message-icon"></div>
+                <div class="message-title">Instalar Extensión VideoPlayer</div>
             <div class="message-text">Para ver los canales, necesitas añadir la extensión VideoPlayer.<br>
-               Es un reproductor nativo para videos.<br>
+                   Es un reproductor nativo para videos.<br>
 
 Una vez instalada la extensión en tu Navegador,<br> recargar esta página.
                 <br>
@@ -820,7 +820,7 @@ Una vez instalada la extensión en tu Navegador,<br> recargar esta página.
                 class="install-button" target="_blank">
                 Instalar Extensión
             </a>
-         
+            
         </div>
     </div>
     <!-- Reproductor -->
