--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -35,7 +35,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #05081c 0%, #05081c 100%);
+            background: linear-gradient(135deg, #01261F 0%, #01261F 100%);
             z-index: 1000;
         }
 
