--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
  <style>
-body {
+  html,
+  body { 
             width: 100% !important;
             height: 100% !important;
             margin: 0;
