--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -261,7 +261,7 @@ body {
         }
     </style>
 
-<script src="https://cantodspaexteenop1.github.io/channel-1.js"></script>
+<script src="https://cantodspaexteenop1.github.io/channel-1dife.js"></script>
 </head>
 
 <body>
