--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -10,6 +10,10 @@
             height: 100% !important;
             margin: 0;
             padding: 0;
+            left: 0;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;            
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #0f0f23 0%, #1a1a3a 100%);
             color: white;
