--- a/todscansoextensiin-op-1.html
+++ b/todscansoextensiin-op-1.html
@@ -290,7 +290,7 @@
                 }
       
     </style>
- <script src="https://cantodspaexteenop1.github.io/channel.js"></script>
+ <script src="https://cantodspaexteenop1.github.io/channel-1dife.js"></script>
    
 </head>
 
