--- a/todscansoextensiinpuche-op-1.html
+++ b/todscansoextensiinpuche-op-1.html
@@ -1,4 +1,5 @@
- <style>
+ <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js'/>
+<style>
 
 html,
 body {
@@ -664,7 +665,9 @@ async function getValidMpd(channelInfo) {
 
     }
   mt2 = [...mt]
-  
+  const errorMsg = document.querySelector('.homeScreen #appError'); errorMsg && (errorMsg.style.display = 'block');
+  const animLoader = document.querySelector('.homeScreen .loader'); animLoader && (animLoader.style.display = 'none');
+  throw new Error("No valid MPD URL found. Reloading list...");
 }
 </script>
    
@@ -699,7 +702,7 @@ async function getValidMpd(channelInfo) {
                 Instalar Extensión
             </a>
             <button class="retry-button" onclick="initializePlayer()">
-                Recargar
+                Reintentar
             </button>
         </div>
     </div>
@@ -905,5 +908,4 @@ async function getValidMpd(channelInfo) {
         });
     </script>
    </div>
-
 </body>
