--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -134,7 +134,7 @@
             box-shadow: 0 8px 30px #fff;
         }
     </style>
-    <script src="https://cantodspaexteenop1.github.io/kkk.js"></script>
+    <script src="kkk.js"></script>
 
 </head>
 
