--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -33,7 +33,7 @@
             background: #000;
         }
         #player iframe {
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
             width: 100%;
