--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -27,15 +27,11 @@
         }
 
         #player {
+             width: 100%;
+            height: 100%;
             position: relative;
-            width: 100%;
-            padding-top: 56.25%; /* Aspect ratio 16:9 */
-            background: #000;
         }
         #player iframe {
-            position: relative;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             border: none;
