--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -31,6 +31,7 @@
             position: relative;
         }
         #player iframe {
+            position: absolute;
             width: 100%;
             height: 100%;
             border: none;
