--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -16,8 +16,9 @@
         .container {
             width: 100%;
             height: 100vh;
-            justify-content: center;
+             position: fixed;
             align-items: center;
+            justify-content: center;
             flex-direction: column;
         }
 
