--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -17,6 +17,7 @@
             width: 100%;
             height: 100vh;
              position: fixed;
+             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
