--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -10,6 +10,10 @@
             color: #fff;
             margin: 0;
             padding: 0;
+        position: fixed;
+             display: flex;
+            align-items: center;
+            justify-content: center;
             font-family: Arial, sans-serif;
         }
 
