--- a/plaeekkk-exte.html
+++ b/plaeekkk-exte.html
@@ -10,6 +10,8 @@
             color: #fff;
             margin: 0;
             padding: 0;
+            width: 100% !important;
+            height: 100% !important;
         position: fixed;
              display: flex;
             align-items: center;
