--- a/plaeepucheee-exte.html
+++ b/plaeepucheee-exte.html
@@ -6,7 +6,7 @@
     <title>-</title>
 <style>
  body {
-            background-color: #000;
+            background-color: #05081c;
             color: #fff;
             margin: 0;
             padding: 0;
