--- a/plaeepucheee-exte.html
+++ b/plaeepucheee-exte.html
@@ -42,6 +42,10 @@
             background: black;
         }
 
+        .hidden {
+            display: none;
+        }
+
 .alert-card {
     background-color: #333;
     border-radius: 8px;
